# DeepFaceLive

./: .gitignore  pyproject.toml
